Fixed minor issues with wobbling on X axis on mobile.

--- a/styles/_homepage.scss
+++ b/styles/_homepage.scss
@@ -8,10 +8,10 @@
     left: 0;
     z-index: -9999;
     height: $deviceHeight;
-    width: $deviceWidth;
+    width: 100%;
     .background__picture {
       height: $deviceHeight;
-      width: $deviceWidth;
+      width: 100%;
     }
     picture {
       position: absolute;
@@ -23,7 +23,7 @@
     top: 0;
     left: 0;
     height: $deviceHeight;
-    width: $deviceWidth;
+    width: 100%;
     .portrait__photo-bg {
       position: relative;
       top: 50%;
@@ -49,14 +49,14 @@
     top: 0;
     left: 0;
     height: $deviceHeight;
-    width: $deviceWidth;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     .homeText__wrapper {
       font-family: "Bungee Inline", cursive;
       height: 60vh;
-      width: $deviceWidth;
+      width: 100%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
