--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -36,7 +36,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    padding: 0.5em;
+    padding: .5em 0 .5em 0;
     .navigation__link {
       font-size: 1.2em;
       width: 100%;
@@ -55,9 +55,9 @@
   .navigation__mobile-button {
     position: fixed;
     display: block;
-    margin: 2em;
-    top: 0;
-    right: 0;
+    margin: 0;
+    top: 2em;
+    right: 2em;
     border: none;
     background: rgb(0, 0, 0);
     width: $deviceWidth/17;
